<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spout</string>
    <string name="title_activity_spout_launcher">Spout</string>
    <string name="RunSpoutButton">Run Spout!</string>
    <string name="LongTailText">Long Tail</string>
    <string name="ColorText">Colorize</string>
    <string name="OnScreenText">Strong Buttons</string>
    <string name="FilterText">Apply Filter (Smooth)</string>
    <string name="ScreenOffsetXText">Offset \'x\':</string>
    <string name="ScreenOffsetYText">\'y\':</string>
    <string name="AspectRatioText">Aspect Ratio</string>
    <string name="TweaksText">Tweaks:</string>
    <string name="VibroText">Vibro</string>
    <string name="SoundText">Sound</string>
    <string name="FullscreenText">Fullscreen</string>
    <string name="CubeText">3D Cube</string>
    <string name="SensorText">Accelerometer</string>
    <string name="OffsetErrorText">Please check your offsets.</string>
    <string name="OffsetErrorText2">Excess values are unacceptable.</string>
    <string name="OffsetErrorTitle">Too big offset value!</string>
    <string name="DialogOkText">OK</string>
    <string name="FireText">Fire!</string>
    <string name="HoldText">Hold</string>
    <string name="LeftText">&lt;  Left</string>
    <string name="RightText">Right &gt;</string>
    <string name="DisableButtonsText">Disable Buttons</string>
    <string name="AboutSpoutButton">About Spout</string>
    <string name="SettingsLabel">Settings</string>
    <string name="TouchLabel">Touch Controls</string>
    <string name="ScreenLabel">Screen Settings</string>
    <string name="CoverString">Spout Cover</string>
    <string name="IconDesc">Spout Icon</string>
    <string name="Version">v1.1 | 23-JAN-2017</string>
    <string name="AboutString">Porting from SDL to Android OS native application with using OpenGL ES drawing:\n• © 2015 S. \"EXL\" KLS\nemail: exl@bk.ru\nemail: exlmotodev@gmail.com\n\nSource Code:\nhttps://github.com/EXL/Spout\n\nArticle About Porting Spout:\nhttp://exlmoto.ru/spout-droid\n\nThanks to:\n• [SoD]Thor for implementing touch joystick;\n• J()KER for testing touch controls;\n• Zorge.R for hosting, patience and help.\n\nOriginal game:\n• © 2002 kuni.</string>
    <string name="SJoy">Joystick</string>
    <string name="SKey">Keys</string>
    <string name="SNone">None</string>

</resources>
