<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/CoverString"
            android:src="@drawable/cover" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonRunSpout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RunSpoutButton" />

            <Button
                android:id="@+id/buttonAboutSpout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AboutSpoutButton" />
        </TableRow>

        <TextView
            android:id="@+id/settings_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SettingsLabel" />

        <CheckBox
            android:id="@+id/checkBoxFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FilterText" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxCube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CubeText" />

            <CheckBox
                android:id="@+id/checkBoxSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SoundText" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxSensor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SensorText" />

            <CheckBox
                android:id="@+id/checkBoxVibro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/VibroText" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ColorText" />

            <CheckBox
                android:id="@+id/checkBoxTail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LongTailText" />
        </TableRow>

        <TextView
            android:id="@+id/screen_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ScreenLabel" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxAspect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AspectRatioText" />

            <CheckBox
                android:id="@+id/checkBoxFullscreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FullscreenText" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/ScreenOffsetXText"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextX"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ScreenOffsetYText"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextY"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:inputType="number" >
            </EditText>
        </TableRow>

        <TextView
            android:id="@+id/touch_label"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TouchLabel" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp" >

            <RadioButton
                android:id="@+id/radioButtonJoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SJoy" />

            <RadioButton
                android:id="@+id/radioButtonKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SKey" />

            <RadioButton
                android:id="@+id/radioButtonNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SNone" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>
